[gd_scene load_steps=11 format=2]

[ext_resource path="res://Scene/Attori/NPlastica.gd" type="Script" id=1]
[ext_resource path="res://Immagini/Nemici/NPlastica/NPlasticaMorte.png" type="Texture" id=2]
[ext_resource path="res://Scene/Attori/Morte.tres" type="Animation" id=3]
[ext_resource path="res://Audio/Raccolta.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 11, 20 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5, 3.875 )

[sub_resource type="Animation" id=4]
resource_name = "Camminata"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 2,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Raccolto"
length = 0.2
tracks/0/type = "audio"
tracks/0/path = NodePath("AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13, 22 )

[node name="NPlastica" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 67
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -2.38419e-07, 1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 2 )
flip_h = true
hframes = 4
vframes = 2
frame = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 1 )

[node name="FloorDetectorRight" type="RayCast2D" parent="."]
position = Vector2( 12, -8 )
enabled = true
cast_to = Vector2( 0, 38 )
collision_mask = 65

[node name="FloorDetectorLeft" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 0, 39 )
collision_mask = 65

[node name="CollisionTimer" type="Timer" parent="."]
one_shot = true

[node name="HitBox" type="Area2D" parent="."]
modulate = Color( 0.129412, 0.662745, 0.109804, 1 )
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( -0.5, -21.125 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Camminata = SubResource( 4 )
anims/Morte = ExtResource( 3 )
anims/RESET = SubResource( 5 )
anims/Raccolto = SubResource( 6 )

[node name="TimerRevive" type="Timer" parent="."]
one_shot = true

[node name="TimerNoCollect" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="Body" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 3

[node name="BodyCollisionShape" type="CollisionShape2D" parent="Body"]
position = Vector2( 0, 5 )
shape = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="TimerRevive" to="." method="_on_TimerRevive_timeout"]
[connection signal="body_entered" from="Body" to="." method="_on_Body_body_entered"]
